# ghana-translator

./: README.md  pyproject.toml
dictionary/: akan_dict_scraper.py  eng_akan_dict.csv
nkrane/: translator.py
nkrane_gt/: translator.py
tc-translator/: __init__.py
