[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nkrane"
version = "0.2.0"
description = "Enhanced Machine Translation with Terminology Control"
readme = "README.md"
authors = [{name = "GhanaNLP", email = "contact@ghananlp.org"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.7"
dependencies = [
    "git+https://github.com/michsethowusu/py-googletrans",
    "pandas>=1.3.0",
    "spacy>=3.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/GhanaNLP/nkrane"
Repository = "https://github.com/GhanaNLP/nkrane"
"Bug Tracker" = "https://github.com/GhanaNLP/nkrane/issues"

[project.optional-dependencies]
cli = ["click>=8.0.0"]
web = ["gradio>=3.0.0", "streamlit>=1.0.0"]

[tool.setuptools]
package-data = {"nkrane" = ["sample_terminology.csv"]}
